--- a/webapp/templates/percentage.html
+++ b/webapp/templates/percentage.html
@@ -5,6 +5,7 @@
   <input id="percent" class="form-control" type="number" step="0.01" placeholder="Enter percentage">
 </div>
 <button id="start" class="btn btn-brand">Run</button>
+<button id="reset" class="btn btn-secondary ms-2">Reset</button>
 <div id="spinner" class="spinner-border text-primary ms-2 d-none" role="status"></div>
 <pre id="log" class="mt-3 bg-light p-2" style="height:300px;overflow:auto;"></pre>
 <div id="status" class="alert alert-success d-none mt-2"></div>
@@ -12,6 +13,7 @@
 {% block scripts %}
 <script>
   const startBtn = document.getElementById('start');
+  const resetBtn = document.getElementById('reset');
   const spinner = document.getElementById('spinner');
   const status = document.getElementById('status');
   startBtn.onclick = function(){
@@ -28,6 +30,29 @@
         spinner.classList.add('d-none');
         startBtn.disabled = false;
         status.textContent = 'Update completed!';
+        status.classList.remove('d-none');
+      } else {
+        log.textContent += e.data + '\n';
+      }
+      log.scrollTop = log.scrollHeight;
+    };
+  };
+
+  resetBtn.onclick = function(){
+    const log = document.getElementById('log');
+    log.textContent='';
+    status.classList.add('d-none');
+    spinner.classList.remove('d-none');
+    startBtn.disabled = true;
+    resetBtn.disabled = true;
+    const es = new EventSource('/stream/reset');
+    es.onmessage = e => {
+      if(e.data === '--done--') {
+        es.close();
+        spinner.classList.add('d-none');
+        startBtn.disabled = false;
+        resetBtn.disabled = false;
+        status.textContent = 'Reset completed!';
         status.classList.remove('d-none');
       } else {
         log.textContent += e.data + '\n';
