--- a/webapp/templates/percentage.html
+++ b/webapp/templates/percentage.html
@@ -5,12 +5,12 @@
   <input id="percent" class="form-control" type="number" step="0.01" placeholder="Enter percentage">
 </div>
 <button id="start" class="btn btn-brand">Run</button>
-<button id="reset" class="btn btn-secondary ms-2">Reset</button>
+<button id="reset" class="btn btn-outline-secondary ms-2">Reset</button>
 <div id="spinner" class="spinner-border text-primary ms-2 d-none" role="status"></div>
 <div id="progress" class="progress mt-2 d-none">
   <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:100%"></div>
 </div>
-<pre id="log" class="mt-3 bg-light p-2" style="height:300px;overflow:auto;"></pre>
+<pre id="log" class="mt-3 bg-dark text-light p-2" style="height:300px;overflow:auto;"></pre>
 <div id="status" class="alert alert-success d-none mt-2"></div>
 {% endblock %}
 {% block scripts %}
