--- a/webapp/templates/variant.html
+++ b/webapp/templates/variant.html
@@ -19,14 +19,16 @@
     </tbody>
   </table>
   {% endfor %}
-  <button class="btn btn-brand mt-2" type="submit"><i class="bi bi-save"></i> Save Changes</button>
+  <div class="d-grid gap-2">
+    <button class="btn btn-brand" type="submit"><i class="bi bi-save"></i> Save Changes</button>
+  </div>
 </form>
 <button id="start" class="btn btn-brand mt-3"><i class="bi bi-play-fill"></i> Run Update</button>
 <div id="spinner" class="spinner-border text-primary ms-2 d-none" role="status"></div>
 <div id="progress" class="progress mt-2 d-none">
   <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:100%"></div>
 </div>
-<pre id="log" class="mt-3 bg-light p-2" style="height:300px;overflow:auto;"></pre>
+<pre id="log" class="mt-3 bg-dark text-light p-2" style="height:300px;overflow:auto;"></pre>
 <div id="status" class="alert alert-success d-none mt-2"></div>
 {% endblock %}
 {% block scripts %}
