--- a/webapp/templates/variant.html
+++ b/webapp/templates/variant.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<h3>Variant Price Update</h3>
+<h3 class="text-center">Variant Price Update</h3>
 <form method="post" onsubmit="return confirm('Save updated surcharges?')">
   <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
   {% for cat, chains in surcharges.items() %}
@@ -19,9 +19,11 @@
     </tbody>
   </table>
   {% endfor %}
-  <button class="btn btn-brand mt-2" type="submit">Save Changes</button>
+  <div class="d-grid gap-2">
+    <button class="btn btn-brand" type="submit"><i class="bi bi-save"></i> Save Changes</button>
+  </div>
 </form>
-<button id="start" class="btn btn-brand mt-3">Run Update</button>
+<button id="start" class="btn btn-brand mt-3"><i class="bi bi-play-fill"></i> Run Update</button>
 <div id="spinner" class="spinner-border text-primary ms-2 d-none" role="status"></div>
 <div id="progress" class="progress mt-2 d-none">
   <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:100%"></div>
