Apply fresh color scheme and layout

--- a/webapp/templates/percentage.html
+++ b/webapp/templates/percentage.html
@@ -10,7 +10,7 @@
 <div id="progress" class="progress mt-2 d-none">
   <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:100%"></div>
 </div>
-<pre id="log" class="mt-3 bg-dark text-light p-2" style="height:300px;overflow:auto;"></pre>
+<pre id="log" class="mt-3 bg-light p-2" style="height:300px;overflow:auto;"></pre>
 <div id="status" class="alert alert-success d-none mt-2"></div>
 {% endblock %}
 {% block scripts %}
