--- a/webapp/templates/home.html
+++ b/webapp/templates/home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<h3 class="text-center mb-4">Welcome</h3>
+<h3 class="text-center text-light mb-4">Welcome</h3>
 <div class="row g-4">
   <div class="col-md-6">
     <div class="card shadow-sm h-100">
