--- a/webapp/templates/variant.html
+++ b/webapp/templates/variant.html
@@ -1,18 +1,18 @@
 {% extends 'base.html' %}
 {% block content %}
-<h3 class="text-center">Variant Price Update</h3>
+<h3 class="text-center text-light">Variant Price Update</h3>
 <form method="post" onsubmit="return confirm('Save updated surcharges?')">
   <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
   {% for cat, chains in surcharges.items() %}
   <h5 class="mt-4">{{ cat|capitalize }}</h5>
-  <table class="table table-striped align-middle">
+  <table class="table table-dark table-striped align-middle">
     <thead><tr><th>Chain</th><th>Surcharge (€)</th></tr></thead>
     <tbody>
     {% for chain, val in chains.items() %}
     <tr>
       <td>{{ chain }}</td>
       <td style="max-width:200px">
-        <input class="form-control" type="number" step="0.01" name="{{ cat }}_{{ chain.replace(' ', '_') }}" value="{{ val }}">
+        <input class="form-control bg-dark text-light" type="number" step="0.01" name="{{ cat }}_{{ chain.replace(' ', '_') }}" value="{{ val }}">
       </td>
     </tr>
     {% endfor %}
@@ -28,7 +28,7 @@
 <div id="progress" class="progress mt-2 d-none">
   <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:100%"></div>
 </div>
-<pre id="log" class="mt-3 bg-light p-2" style="height:300px;overflow:auto;"></pre>
+<pre id="log" class="mt-3 bg-dark text-light p-2 border" style="height:300px;overflow:auto;"></pre>
 <div id="status" class="alert alert-success d-none mt-2"></div>
 {% endblock %}
 {% block scripts %}
