Add icons to login page

--- a/webapp/templates/login.html
+++ b/webapp/templates/login.html
@@ -2,18 +2,24 @@
 {% block content %}
 <div class="row justify-content-center">
   <div class="col-md-4">
-    <h3 class="mb-3">Login</h3>
+    <h3 class="mb-3 text-center"><i class="fa-solid fa-circle-user me-1"></i>Login</h3>
     <form method="post">
       <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
-      <div class="mb-3">
+      <div class="mb-3 input-group">
+        <span class="input-group-text"><i class="fa-solid fa-user"></i></span>
         <input class="form-control" type="text" name="username" placeholder="Username" required>
       </div>
-      <div class="mb-3">
-        <input class="form-control" type="password" name="password" placeholder="Password" required>
+      <div class="mb-3 input-group">
+        <span class="input-group-text"><i class="fa-solid fa-lock"></i></span>
+        <input class="form-control" id="password" type="password" name="password" placeholder="Password" required>
+        <button class="btn btn-outline-secondary" type="button" id="togglePass"><i class="fa-solid fa-eye"></i></button>
       </div>
       {% if error %}<div class="text-danger mb-2">{{ error }}</div>{% endif %}
-      <button class="btn btn-brand" type="submit">Login</button>
+      <button class="btn btn-brand w-100" type="submit"><i class="fa-solid fa-right-to-bracket me-1"></i>Login</button>
     </form>
   </div>
 </div>
+{% endblock %}
+{% block scripts %}
+<script src="{{ url_for('static', filename='script.js') }}"></script>
 {% endblock %}
