--- a/webapp/templates/home.html
+++ b/webapp/templates/home.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h3 class="mb-4">Welcome {{ session['user'] }}</h3>
+<h3 class="mb-4">{{ t('welcome') }} {{ session['user'] }}</h3>
 <div class="row g-4">
   <div class="col-md-6 col-lg-4">
     <a href="{{ url_for('main.percentage_updater') }}" class="text-decoration-none text-reset">
       <div class="card service-card h-100 text-center p-4">
         <i class="fa-solid fa-percent fa-2x mb-3"></i>
-        <h5 class="card-title">Percentage Price Updater</h5>
-        <p class="card-text small">Adjust all product prices by a percentage.</p>
+        <h5 class="card-title">{{ t('percentage_card_title') }}</h5>
+        <p class="card-text small">{{ t('percentage_card_desc') }}</p>
       </div>
     </a>
   </div>
@@ -16,8 +16,8 @@
     <a href="{{ url_for('main.variant_updater') }}" class="text-decoration-none text-reset">
       <div class="card service-card h-100 text-center p-4">
         <i class="fa-solid fa-gears fa-2x mb-3"></i>
-        <h5 class="card-title">Variant Price Updater</h5>
-        <p class="card-text small">Update variant surcharges individually.</p>
+        <h5 class="card-title">{{ t('variant_card_title') }}</h5>
+        <p class="card-text small">{{ t('variant_card_desc') }}</p>
       </div>
     </a>
   </div>
